--- a/1.html
+++ b/1.html
@@ -25,15 +25,15 @@ body {
   border-radius: 20px;
   box-shadow: 0 0 20px rgba(0,0,0,0.5);
   width: 90%;
-  max-width: 800px;
+  max-width: 850px;
   text-align: center;
 }
 
 h2,h3 { margin-bottom: 15px; }
 
-input[type="text"] {
+input[type="text"], input[type="number"] {
   width: 80%;
-  padding: 10px;
+  padding: 8px;
   margin: 5px 0;
   border-radius: 10px;
   border: none;
@@ -41,9 +41,9 @@ input[type="text"] {
 }
 
 button {
-  padding: 10px 20px;
+  padding: 8px 15px;
   margin: 5px;
-  font-size: 16px;
+  font-size: 15px;
   border: none;
   border-radius: 12px;
   cursor: pointer;
@@ -66,7 +66,7 @@ table {
 }
 
 th, td {
-  padding: 10px;
+  padding: 8px;
   text-align: center;
   border-bottom: 1px solid #555;
 }
@@ -100,6 +100,7 @@ input.editable {
 <th>تایم ورود</th>
 <th>تایم خروج</th>
 <th>شعبه</th>
+<th>تأخیر (دقیقه)</th>
 <th>ویرایش</th>
 <th>ذخیره</th>
 <th>حذف</th>
@@ -127,23 +128,29 @@ function showManagerAttendance(){
   managerTable.innerHTML='';
   const today = todayStr();
 
-  // گروه‌بندی رکوردها: هر کارمند و شعبه یک ردیف
   let grouped = {};
   attendance.forEach(item=>{
     if(item.date!==today) return;
     const key = item.name + '_' + item.branch;
-    if(!grouped[key]) grouped[key] = {name:item.name, branch:item.branch, entry:'', exit:''};
+    if(!grouped[key]) grouped[key] = {
+      name:item.name, 
+      branch:item.branch, 
+      entry:'', 
+      exit:'',
+      delay:item.delay || '' // اضافه
+    };
     if(item.type==='ورود') grouped[key].entry = item.time;
     if(item.type==='خروج') grouped[key].exit = item.outTime;
   });
 
-  Object.values(grouped).forEach((item,index)=>{
+  Object.values(grouped).forEach(item=>{
     const tr = document.createElement('tr');
     tr.innerHTML = `
       <td class="name-cell">${item.name}</td>
       <td><input type="text" value="${item.entry}" disabled></td>
       <td><input type="text" value="${item.exit}" disabled></td>
       <td><input type="text" value="${item.branch}" disabled></td>
+      <td><input type="number" min="5" max="60" step="5" value="${item.delay}" disabled></td>
       <td><button class="edit" onclick="enableEdit('${item.name}','${item.branch}')">ویرایش</button></td>
       <td><button class="save" onclick="saveEdit('${item.name}','${item.branch}')" disabled>ذخیره</button></td>
       <td><button class="delete" onclick="deleteRecord('${item.name}','${item.branch}')">حذف</button></td>
@@ -153,8 +160,7 @@ function showManagerAttendance(){
 }
 
 function enableEdit(name, branch){
-  const tbody = document.getElementById('managerAttendance');
-  for(let row of tbody.children){
+  for(let row of managerTable.children){
     if(row.cells[0].textContent===name && row.cells[3].children[0].value===branch){
       row.querySelectorAll('input').forEach(inp=>{ inp.disabled=false; inp.classList.add('editable'); });
       row.querySelector('button.save').disabled=false;
@@ -164,14 +170,15 @@ function enableEdit(name, branch){
 }
 
 function saveEdit(name, branch){
-  const tbody = document.getElementById('managerAttendance');
-  for(let row of tbody.children){
+  for(let row of managerTable.children){
     if(row.cells[0].textContent===name && row.cells[3].children[0].value===branch){
       const inputs = row.querySelectorAll('input');
       attendance.forEach(item=>{
         if(item.name===name && item.branch===branch && item.date===todayStr()){
           if(item.type==='ورود') item.time = inputs[1].value;
           if(item.type==='خروج') item.outTime = inputs[2].value;
+          item.branch = inputs[3].value;
+          item.delay = inputs[4].value; // ذخیره تأخیر
         }
       });
       saveRecords();
@@ -190,7 +197,6 @@ function deleteRecord(name, branch){
   }
 }
 
-// بروزرسانی خودکار
 window.addEventListener('storage', ()=>{
   attendance = JSON.parse(localStorage.getItem('attendance')||'[]');
   showManagerAttendance();
